<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sidebar="http://schemas.android.com/apk/res/com.telecom.android.contactmanager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mycard_2d_linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/title_bj"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="1dip" >

        <TextView
            android:id="@+id/title_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_title"
            android:textColor="@color/white"
            android:textSize="@dimen/fst_team_name_size" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:cacheColorHint="#00000000"
        android:orientation="horizontal"
        android:padding="4dip" >

        <TextView
            android:id="@+id/text_notuse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:id="@+id/searchText_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:padding="1dip" >

            <EditText
                android:id="@+id/TeamName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/search_editext_border"
                android:hint="@string/inputTeamName" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:cacheColorHint="#00000000"
        android:orientation="horizontal"
        android:padding="4dip" >

        <TextView
            android:id="@+id/text_notuse2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:id="@+id/searchText_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:padding="1dip" >

            <ImageView style="@style/search_img" />

            <EditText
                android:id="@+id/searchText"
                style="@style/search_edit"
                android:background="@drawable/search_editext_border" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/contactList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cacheColorHint="#00000000" />

        <com.telecom.android.contactmanager.SideBar
            android:id="@+id/sideBar"
            android:layout_width="18dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right|center_vertical"
            sidebar:fontSize="@integer/sidebar_fontsize"
            sidebar:itemHeight="@integer/sidebar_itemheight" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sure"
            android:layout_width="120dp"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/shape_corner_button"
            android:text="@string/makeSure"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="30dp"
            android:background="@drawable/shape_corner_button"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>